fixed problem with z-index

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -5,7 +5,6 @@
 
   &__container {
     position: relative;
-    z-index: -2;
     padding: 0 60px;
     border-top: 1px solid transparent;
     background-color: $yellow;
